--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview",
     "test:db": "node test-db.js",
     "server": "node src/backend/server.js",
-    "dev:all": "concurrently \"npm run server\" \"npm run dev\""
+    "server:enhanced": "node src/backend/server-enhanced.js",
+    "dev:all": "concurrently \"npm run server:enhanced\" \"npm run dev\"",
+    "dev:production": "concurrently \"npm run server:enhanced\" \"npm run dev\"",
+    "docker:up": "docker-compose up -d postgres redis",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.64.0",
@@ -18,11 +23,18 @@
     "@xyflow/react": "^12.3.2",
     "ajv": "^8.17.1",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
+    "bullmq": "^5.58.9",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "immer": "^10.0.3",
+    "ioredis": "^5.8.0",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.263.1",
     "nodemailer": "^7.0.6",
     "openai": "^5.23.1",
@@ -33,16 +45,20 @@
     "tailwindcss": "^4.0.0-alpha.30",
     "twilio": "^5.10.1",
     "uuid": "^9.0.1",
+    "ws": "^8.18.3",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "@types/pg": "^8.15.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
