feat: Implement new functionality
Ralph iteration 12: 2025-09-27 18:14:19

- Automated by Ralph autonomous coding system
- Based on tasks from fix_plan.md
- See AGENT.md for build/test instructions

--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test:db": "node test-db.js",
+    "test:infrastructure": "node test-infrastructure.js",
     "server": "node src/backend/server.js",
     "server:enhanced": "node src/backend/server-enhanced.js",
+    "start:production": "node start-production.js",
     "dev:all": "concurrently \"npm run server:enhanced\" \"npm run dev\"",
-    "dev:production": "concurrently \"npm run server:enhanced\" \"npm run dev\"",
+    "dev:production": "concurrently \"npm run start:production\" \"npm run dev\"",
     "docker:up": "docker-compose up -d postgres redis",
     "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "docker:logs": "docker-compose logs -f",
+    "production:full": "npm run docker:up && sleep 3 && npm run start:production"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.64.0",
